<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>lol.ohai.regex</groupId>
    <artifactId>regex-parent</artifactId>
    <version>0.1.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>regex-parent</name>
    <description>Java reimplementation of the Rust regex crate</description>

    <modules>
        <module>regex-syntax</module>
        <module>regex-automata</module>
        <module>regex</module>
        <module>regex-test</module>
    </modules>

    <properties>
        <maven.compiler.release>21</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <junit.version>6.0.1</junit.version>
        <jackson.version>2.20.0</jackson.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.junit</groupId>
                <artifactId>junit-bom</artifactId>
                <version>${junit.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.dataformat</groupId>
                <artifactId>jackson-dataformat-toml</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>lol.ohai.regex</groupId>
                <artifactId>regex-syntax</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>lol.ohai.regex</groupId>
                <artifactId>regex-automata</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>lol.ohai.regex</groupId>
                <artifactId>regex-test</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <profiles>
        <profile>
            <id>bench</id>
            <modules>
                <module>regex-bench</module>
            </modules>
        </profile>
    </profiles>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.15.0</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.5.5</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
